--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <h2>added h2 tag to my website</h2>
+    <h2>Added h2 tag to my website</h2>
+    <h4>Added h4 tag to my website</h4>
 </body>
 </html>
