--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Welcome to My Website</h1>
     <h2>Added h2 tag to my website</h2>
     <h3>Added h3 tag to my website</h3>
+    <h5>Added h5 tag to my website</h5>
     
 </body>
 </html>
